# vapad

./: .gitignore  README.md  RELEASE_NOTES.md  \  meson.build  org.hitchhiker_linux.vapad.json
data/: meson.build  org.hitchhiker_linux.vapad.appdata.xml.in  org.hitchhiker_linux.vapad.desktop.in  org.hitchhiker_linux.vapad.gschema.xml
data/icons/: meson.build
pkg/usr/local/share/appdata/: org.hitchhiker_linux.vapad.appdata.xml
pkg/usr/local/share/applications/: org.hitchhiker_linux.vapad.desktop
po/: LINGUAS  POTFILES  de.po  es.mo  es.po  meson.build  ru.po
src/: .goutputstream-3UBPQ1  application.vala  main.vala  meson.build  search_dialog.ui  search_dialog.vala  style.css  tab.ui  tab.vala  tab_label.ui  tab_label.vala  theme_switcher.ui  theme_switcher.vala  vapad.gresource.xml  window.ui  window.vala
src/gtk/: help-overlay.ui
